<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <AutoCompleteTextView
            android:id="@+id/autocompletionModeleFlipper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="15dip"
            android:hint="@string/SectionFlipper"
            android:imeOptions="actionDone"
            android:inputType="textFilter|textNoSuggestions"
            android:singleLine="true" />

        <EditText
            android:id="@+id/champNomEnseigne"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="15dip"
            android:hint="@string/SectionNomEnseigne"
            android:inputType="textCapSentences|textAutoCorrect" />

        <EditText
            android:id="@+id/champAdresse"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="15dip"
            android:inputType="textCapSentences|textAutoCorrect"
            android:hint="@string/SectionAdresse" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <EditText
                android:id="@+id/champCodePostal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="15dip"
                android:hint="@string/SectionCodePostal"
                android:layout_weight="60" />
            <EditText
                android:id="@+id/champVille"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="15dip"
                android:hint="@string/SectionVille"
                android:inputType="textCapSentences|textAutoCorrect"
                android:layout_weight="40"/>
        </LinearLayout>

        <EditText
            android:id="@+id/champPays"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="15dip"
            android:hint="@string/SectionPays"
            android:text="France"/>

        <Button
            android:id="@+id/BoutonEnvoiInfosFlipper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:minHeight="50dp"
            android:minWidth="250dp"
            android:text="@string/BoutonEnvoiInfosFlipper" />

        <fragment
            android:id="@+id/mapViewFragment"
            android:layout_width="fill_parent"
            android:layout_height="400dp"
            android:layout_margin="20dp"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:apiKey="@string/googleMapsApiKey" />
    </LinearLayout>

</ScrollView>