<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0">

        <EditText
            android:id="@+id/NewTournoiNom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:hint="@string/SectionTournoi"
            android:inputType="textCapSentences|textNoSuggestions"
            android:singleLine="true" />

        <EditText
            android:id="@+id/NewTournoiURL"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:hint="@string/SectionURLTournoi"
            android:inputType="textUri"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

        <EditText
            android:id="@+id/NewTournoiDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:hint="@string/SectionDateTournoi"
            android:inputType="none"
            android:clickable="false"
            android:layout_weight="70"/>

        <ImageButton
            android:id="@+id/picDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_date_range_black_24dp" />


    </LinearLayout>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

        <EditText
            android:id="@+id/NewTournoiEnseigne"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:hint="@string/SectionNomEnseigne"
            android:inputType="textCapSentences|textAutoCorrect"
            android:layout_weight="70"/>

            <ImageButton
                android:id="@+id/NewTournoiButtonSearchAdress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_weight="0"
                app:srcCompat="@drawable/ic_search_black_24dp" />


        </LinearLayout>


        <EditText
            android:id="@+id/NewTournoiAdresse"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:inputType="textCapSentences|textAutoCorrect"
            android:hint="@string/SectionAdresse" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/NewTournoiCP"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="0dip"
                android:inputType="number"
                android:hint="@string/SectionCodePostal"
                android:layout_weight="70" />
            <EditText
                android:id="@+id/NewTournoiVille"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="0dip"
                android:hint="@string/SectionVille"
                android:inputType="textCapSentences|textAutoCorrect"
                android:layout_weight="30"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

        <EditText
            android:id="@+id/NewTournoiPays"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:imeOptions="actionDone"
            android:hint="@string/SectionPays"
            android:inputType="textCapSentences|textAutoCorrect"
            android:text="France"
            android:layout_weight="30"/>

        <ImageButton
            android:id="@+id/NewTournoiButtonCheckAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            app:srcCompat="@drawable/ic_map_black_24dp"
            android:layout_weight="0"/>

        </LinearLayout>


    </LinearLayout>

    <View style="@style/itemDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:gravity="center|bottom"
        android:layout_weight="1">

        <Button
            android:background="@drawable/selectable_item_background"
            android:id="@+id/NewTournoiAnnuler"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/SignalementWizardCancel" />

        <Button
            android:background="@drawable/selectable_item_background"
            android:id="@+id/NewTournoiSuivant"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/boutonValideScore" />

    </LinearLayout>

</LinearLayout>