<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/WizardPageContainer" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:scrollbarStyle="outsideOverlay" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/autocompletionModeleFlipper"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:layout_marginTop="3dip"
                    android:layout_weight="20"
                    android:hint="@string/SectionFlipper"
                    android:imeOptions="actionDone"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/champPseudo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="1dip"
                    android:layout_weight="50"
                    android:hint="@string/hintPseudo"
                    android:imeOptions="actionDone"
                    android:inputType="textFilter|textCapCharacters" />

            </LinearLayout>

            <EditText
                android:id="@+id/texteCommentaire"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="3dip"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/hintCommentaireNew"
                android:imeOptions="actionDone|normal"
                android:inputType="textCapSentences|textMultiLine"
                android:lines="1" />

            <AutoCompleteTextView
                android:id="@+id/autocompletionModeleFlipper2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:hint="@string/SignalementDeuxiemeModele"
                android:imeOptions="actionDone"
                android:inputType="textFilter|textNoSuggestions"
                android:singleLine="true" />

            <AutoCompleteTextView
                android:id="@+id/autocompletionModeleFlipper3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:hint="@string/SignalementTroisiemeModele"
                android:imeOptions="actionDone"
                android:inputType="textFilter|textNoSuggestions"
                android:singleLine="true" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
